--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -50,9 +50,9 @@
           $this->component(
               'confirm-menu',
               [
-                'label' => 'Delete',
+                'label' => 'Delete (new)',
                 'labelIcon' => 'cart-remove',
-                'toggleClassAttr' => 'toolbar-btn',
+                'toggleClass' => 'toolbar-btn',
               ]
           )
         ?>
