demo: confirm menus working in storageretrievalrequests.

--- a/themes/bootstrap3/templates/holds/list.phtml
+++ b/themes/bootstrap3/templates/holds/list.phtml
@@ -44,6 +44,20 @@
                   <li><a href="#" class="confirm_cancel_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
                 </ul>
               </div>
+              <?=
+                $this->component(
+                    'confirm-menu',
+                    [
+                      'label' => 'hold_cancel_selected',
+                      'toggleAttrs' => [
+                        'data-lightbox-ignore' => '',
+                        'name' => 'cancelSelected',
+                      ],
+                      'toggleClass' => 'btn btn-default dropdown-toggle',
+                    ]
+                )
+              ?>
+
               <div class="btn-group">
                 <input id="cancelAll" name="cancelAll" type="submit" value="<?=$this->transEscAttr("hold_cancel_all") ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
                 <ul class="dropdown-menu">
@@ -56,11 +70,11 @@
                       'confirm-menu',
                       [
                         'label' => 'hold_cancel_all',
-                        'labelExtraAttributes' => [
+                        'toggleAttrs' => [
                           'data-lightbox-ignore' => '',
                           'name' => 'cancelAll',
                         ],
-                        'toggleClassAttr' => 'btn btn-default dropdown-toggle',
+                        'toggleClass' => 'btn btn-default dropdown-toggle',
                       ]
                   )
                 ?>
