--- a/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
+++ b/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
@@ -32,6 +32,19 @@
             <li><a class="confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </div>
+        <?=
+          $this->component(
+            'confirm-menu',
+            [
+              'attrs' => ['id' => 'srr_cancel_selected'],
+              'label' => 'storage_retrieval_request_cancel_selected',
+              'description' => 'confirm_storage_retrieval_request_cancel_selected_text',
+              'toggleClass' => 'btn btn-default',
+              'toggleAttrs' => ['name' => 'cancelSelected'],
+            ]
+          )
+        ?>
+
         <div class="btn-group">
           <input id="cancelAll" name="cancelAll" type="submit" value="<?=$this->transEscAttr("storage_retrieval_request_cancel_all") ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown"/>
           <ul class="dropdown-menu">
@@ -40,6 +53,18 @@
             <li><a class="confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </div>
+        <?=
+          $this->component(
+            'confirm-menu',
+            [
+              'attrs' => ['id' => 'srr_cancel_all'],
+              'label' => 'storage_retrieval_request_cancel_all',
+              'description' => 'confirm_storage_retrieval_request_cancel_all_text',
+              'toggleClass' => 'btn btn-default',
+              'toggleAttrs' => ['name' => 'cancelAll'],
+            ]
+          )
+        ?>
     <?php endif; ?>
 
     <ul class="record-list">
