--- a/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
+++ b/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
@@ -3,6 +3,9 @@
     throw new \Exception('label undefined for confirm-menu component.');
   }
 
+  $attrs = $this->attrs ?? [];
+  $attrs['class'] = trim('confirm-menu ' . $attrs['class']);
+
   $toggleLabelEsc = $this->transEsc($this->label);
   $toggleClassAttr = trim('confirm__toggle ' . $this->toggleClass ?? '');
   $toggleAttrs = $this->toggleAttrs ?? [];
@@ -13,7 +16,7 @@
   $cancelLabelEsc = $this->transEsc($this->cancel ?? 'confirm_dialog_no');
 ?>
 
-<div class="confirm-menu">
+<div <?=$this->htmlAttributes($attrs)?>>
   <button
     type="button"
     class="<?=$this->escapeHtmlAttr($toggleClassAttr) ?>"
