style: visual and code styles.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -77,7 +77,7 @@ header .container.navbar { margin-bottom: 0; }
   }
 }
 
-.search__option .dropdown-toggle {
+button.dropdown-toggle {
   &:extend(.btn);
   &:extend(.btn-default);
 }
