Fix SearchLimitTest and make some associated fixes/improvements.

--- a/themes/bootstrap3/templates/_ui/components/menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/menu-button.phtml
@@ -28,7 +28,7 @@
     $toggleAttrs['href'] = $this->href;
     $toggleAttrs['type'] = null;
   }
-  $selected = '';
+  $selected = $this->defaultSelectedValue ?? '';
 ?>
 <?php ob_start(); ?>
   <ul class="dropdown-menu">
