--- a/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
+++ b/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
@@ -41,6 +41,7 @@
           $this->component(
               'menu-button',
               [
+                'wrapperClass' => 'search__notify',
                 'showSelectedValue' => true,
                 'menuItems' => array_map(
                     function ($label, $val) {
