Add a title to book bag popovers.
This fixes a warning from the HTML validator.

--- a/themes/bootstrap3/templates/layout/js-translations.phtml
+++ b/themes/bootstrap3/templates/layout/js-translations.phtml
@@ -55,6 +55,7 @@ if ($cart->isActive()) {
         'bookbagStatusFull' => 'bookbag_full',
         'confirmDelete' => 'confirm_delete',
         'confirmEmpty' => 'bookbag_confirm_empty',
+        'Information' => 'Information',
         'itemsAddBag' => 'items_added_to_bookbag',
         'itemsInBag' => 'items_already_in_bookbag',
         'removeBookBag' => 'Remove from Book Bag',
