--- a/themes/bootstrap3/scss/components/sidebar.scss
+++ b/themes/bootstrap3/scss/components/sidebar.scss
@@ -175,6 +175,12 @@ body.rtl .full-facet-list .active .fa.fa-times { float: left; }
   .date-from { padding-right: .25rem; }
   .date-to   { padding-left:  .25rem; }
 }
+.sidebar {
+  h3 {
+    font-size: $font-size-base;
+    margin: 0;
+  }
+}
 @media (min-width: 768px) {
   .author-facets { display: flex; }
   .author-list { flex: 0 1 100%; }
