--- a/themes/bootstrap3/templates/primo/advanced.phtml
+++ b/themes/bootstrap3/templates/primo/advanced.phtml
@@ -77,7 +77,7 @@
     <input type="submit" class="btn btn-primary" name="submit" value="<?=$this->transEscAttr("Find")?>">
   </div>
 
-  <nav class="<?=$this->layoutClass('sidebar')?>">
+  <div class="<?=$this->layoutClass('sidebar')?>">
     <?php if ($hasDefaultsApplied): ?>
       <input type="hidden" name="dfApplied" value="1">
     <?php endif ?>
@@ -110,5 +110,5 @@
         </div>
       <?php endforeach; ?>
     <?php endif; ?>
-  </nav>
+  </div>
 </form>
