--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -175,11 +175,9 @@ body.rtl .full-facet-list .active .fa.fa-times { float: left; }
   .date-from { padding-right: .25rem; }
   .date-to   { padding-left:  .25rem; }
 }
-.sidebar {
-  h3 {
-    font-size: @font-size-base;
-    margin: 0;
-  }
+h3.facet-title {
+  font-size: @font-size-base;
+  margin: 0;
 }
 @media (min-width: 768px) {
   .author-facets { display: flex; }
