--- a/themes/bootstrap3/templates/Recommend/SideFacets.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets.phtml
@@ -59,7 +59,7 @@
     <?php $collapsed = in_array($title, $collapsedFacets); ?>
     <?php // Data-title attribute is for analytics use.  Do not remove. ?>
     <div class="facet-group" id="side-panel-<?=$this->escapeHtmlAttr($title) ?>" data-title="<?=$this->escapeHtmlAttr($cluster['label']) ?>">
-      <h3>
+      <h3 class="facet-title">
         <button class="title<?php if ($collapsed): ?> collapsed<?php endif ?>" data-toggle="collapse" data-target="#side-collapse-<?=$this->escapeHtmlAttr($title) ?>" >
           <span class="facet-title"><?=$this->transEsc($cluster['label'])?></span>
           <?=$this->icon('collapse', 'facet-title-icon') ?>
