--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -201,8 +201,8 @@
       <h2><?=$this->transEsc("Search Tips")?></h2>
       <?php // Data-title attribute is for analytics use.  Do not remove. ?>
       <div class="facet-group" data-title="<?=$this->escapeHtmlAttr("Search Tips") ?>">
-        <a class="facet help-link" data-lightbox href="<?=$this->url('help-home')?>?topic=advsearch&amp;_=<?=time() ?>"><?=$this->transEsc("Help with Advanced Search")?></a>
-        <a class="facet help-link" data-lightbox href="<?=$this->url('help-home')?>?topic=search&amp;_=<?=time() ?>"><?=$this->transEsc("Help with Search Operators")?></a>
+        <a class="facet help-link" data-lightbox href="<?=$this->url('help-home', ['topic' => 'advsearch'])?>?_=<?=time() ?>"><?=$this->transEsc("Help with Advanced Search")?></a>
+        <a class="facet help-link" data-lightbox href="<?=$this->url('help-home', ['topic' => 'search'])?>?_=<?=time() ?>"><?=$this->transEsc("Help with Search Operators")?></a>
       </div>
     </div>
   </form>
