add h2 and header for DefaultRecord/result-list and list-entry

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -207,6 +207,15 @@ header .container.navbar { margin-bottom: 0; }
 .result-body {
   padding: 0;
   padding-bottom: .25rem;
+
+  h2 {
+    font-size: unset;
+    line-height: @line-height-base;
+    margin: 0;
+  }
+  header {
+    margin-top: unset;
+  }
 }
 
 .btn-bookbag-toggle,
