--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -209,6 +209,19 @@ header .container.navbar { margin-bottom: 0; }
   padding-bottom: .25rem;
 }
 
+.result-body &,
+.media-body &
+{
+  h2 {
+    font-size: unset;
+    line-height: $line-height-base;
+    margin: 0;
+  }
+  header {
+    margin-top: unset;
+  }
+}
+
 .btn-bookbag-toggle,
 .result-links a {
   line-height: 1.5;
