add h2 and header for myresearch and holds

--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -209,9 +209,8 @@ header .container.navbar { margin-bottom: 0; }
   padding-bottom: .25rem;
 }
 
-.result-body &,
-.media-body &
-{
+.result-body,
+.media-body {
   h2 {
     font-size: unset;
     line-height: $line-height-base;
