--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -207,7 +207,10 @@ header .container.navbar { margin-bottom: 0; }
 .result-body {
   padding: 0;
   padding-bottom: .25rem;
+}
 
+.result-body,
+.media-body {
   h2 {
     font-size: unset;
     line-height: @line-height-base;
