--- a/themes/bootstrap3/templates/holds/list.phtml
+++ b/themes/bootstrap3/templates/holds/list.phtml
@@ -98,26 +98,27 @@
               <?=$thumbnail ?>
             <?php endif ?>
             <div class="media-body">
-              <?php
-                // If this is a non-missing Solr record, we should display a link:
-                if (is_a($resource, 'VuFind\\RecordDriver\\SolrDefault') && !is_a($resource, 'VuFind\\RecordDriver\\Missing')) {
-                  $title = $resource->getTitle();
-                  $title = empty($title) ? $this->transEsc('Title not available') : $this->escapeHtml($title);
-                  echo '<a href="' . $this->escapeHtmlAttr($this->recordLinker()->getUrl($resource))
-                    . '" class="title">' . $title . '</a>';
-                } elseif (isset($ilsDetails['title']) && !empty($ilsDetails['title'])) {
-                  // If the record is not available in Solr, perhaps the ILS driver sent us a title we can show...
-                  echo '<span class="title">' . $this->escapeHtml($ilsDetails['title']) . '</span>';
-                } else {
-                  // Last resort -- indicate that no title could be found.
-                  echo $this->transEsc('Title not available');
-                }
-              ?><br>
-              <?php $listAuthors = $resource->getPrimaryAuthors(); if (!empty($listAuthors)): ?>
-                <?=$this->transEsc('by')?>:
-                <a href="<?=$this->record($resource)->getLink('author', $listAuthors[0])?>"><?=$this->escapeHtml($listAuthors[0])?></a><?php if (count($listAuthors) > 1): ?>, <?=$this->transEsc('more_authors_abbrev')?><?php endif; ?><br>
-              <?php endif; ?>
-
+              <header>
+                <?php
+                  // If this is a non-missing Solr record, we should display a link:
+                  if (is_a($resource, 'VuFind\\RecordDriver\\SolrDefault') && !is_a($resource, 'VuFind\\RecordDriver\\Missing')) {
+                    $title = $resource->getTitle();
+                    $title = empty($title) ? $this->transEsc('Title not available') : $this->escapeHtml($title);
+                    echo '<h2><a href="' . $this->escapeHtmlAttr($this->recordLinker()->getUrl($resource))
+                      . '" class="title">' . $title . '</a></h2>';
+                  } elseif (isset($ilsDetails['title']) && !empty($ilsDetails['title'])) {
+                    // If the record is not available in Solr, perhaps the ILS driver sent us a title we can show...
+                    echo '<h2 class="title">' . $this->escapeHtml($ilsDetails['title']) . '</h2>';
+                  } else {
+                    // Last resort -- indicate that no title could be found.
+                    echo $this->transEsc('Title not available');
+                  }
+                ?>
+                <?php $listAuthors = $resource->getPrimaryAuthors(); if (!empty($listAuthors)): ?>
+                  <?=$this->transEsc('by')?>:
+                  <a href="<?=$this->record($resource)->getLink('author', $listAuthors[0])?>"><?=$this->escapeHtml($listAuthors[0])?></a><?php if (count($listAuthors) > 1): ?>, <?=$this->transEsc('more_authors_abbrev')?><?php endif; ?>
+                <?php endif; ?>
+              </header>
               <?php if (count($resource->getFormats()) > 0): ?>
                 <?=$this->record($resource)->getFormatList() ?>
                 <br>
