--- a/themes/bootstrap3/templates/RecordTab/holdingsils/extended.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/extended.phtml
@@ -29,7 +29,16 @@
           <?php else: ?>
             <?php if ($holding['availability']): ?>
               <?php /* Begin Available Items (Holds) */ ?>
-              <span class="text-success"><?=$this->transEsc("Available")?><link property="availability" href="http://schema.org/InStock"></span>
+              <?php
+                if ((int)$holding['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNCERTAIN) {
+                  $statusClassEsc = 'text-warning';
+                  $status = $holding['status'];
+                } else {
+                  $statusClassEsc = 'text-success';
+                  $status = is_int($holding['availability']) && !empty($holding['status']) ? $holding['status'] : 'Available';
+                }
+              ?>
+              <span class="<?=$statusClassEsc?>"><?=$this->transEsc($status)?><link property="availability" href="http://schema.org/InStock"></span>
             <?php else: ?>
               <?php /* Begin Unavailable Items (Recalls) */ ?>
               <span class="text-danger"><?=$this->transEsc($holding['status'])?><link property="availability" href="http://schema.org/OutOfStock"></span>
