--- a/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
@@ -20,7 +20,16 @@
       <?php else: ?>
         <?php if ($holding['availability'] ?? false): ?>
           <?php /* Begin Available Items (Holds) */ ?>
-           <span class="text-success"><?=$this->transEsc("Available")?><link property="availability" href="http://schema.org/InStock"></span>
+            <?php
+              if ((int)$holding['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNCERTAIN) {
+                $statusClassEsc = 'text-warning';
+                $status = $holding['status'];
+              } else {
+                $statusClassEsc = 'text-success';
+                $status = is_int($holding['availability']) && !empty($holding['status']) ? $holding['status'] : 'Available';
+              }
+            ?>
+            <span class="<?=$statusClassEsc?>"><?=$this->transEsc($status)?><link property="availability" href="http://schema.org/InStock"></span>
           <?php if ($holding['link'] ?? false): ?>
             <a class="<?=$check ? 'checkRequest ' : ''?>placehold icon-link" <?php if (!empty($holding['linkLightbox'])): ?>data-lightbox <?php endif; ?>href="<?=$this->escapeHtmlAttr($this->recordLinker()->getRequestUrl($holding['link']))?>">
               <?=$this->icon('place-hold', 'icon-link__icon') ?>
@@ -40,7 +49,7 @@
             </a>
           <?php endif; ?>
         <?php else: ?>
-          <?php /* Begin Unavailable Items (Recalls) */ ?>
+          <?php /* Begin Unavailable Items (Holds/Recalls) */ ?>
           <span class="text-danger"><?=$this->transEsc($holding['status'])?><link property="availability" href="http://schema.org/OutOfStock"></span>
           <?php if ($holding['returnDate'] ?? false): ?>&ndash; <span class="small"><?=$this->escapeHtml($holding['returnDate'])?></span><?php endif; ?>
           <?php if ($holding['duedate'] ?? false): ?>
