--- a/themes/bootstrap3/templates/ajax/status-full.phtml
+++ b/themes/bootstrap3/templates/ajax/status-full.phtml
@@ -26,10 +26,23 @@
       <td class="fullAvailability">
         <?php if ($item['use_unknown_message'] ?? false): ?>
           <span><?=$this->transEsc("status_unknown_message")?></span>
-        <?php elseif ($item['availability']): ?>
-          <span class="text-success"><?=($item['reserve'] == 'Y') ? $this->transEsc("On Reserve") : $this->transEsc("Available")?></span>
-        <?php else: ?>
+        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNAVAILABLE): ?>
           <span class="text-danger"><?=$this->transEsc($item['status'])?></span>
+        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNCERTAIN): ?>
+          <span class="text-warning"><?=$this->transEsc($item['status'])?></span>
+        <?php else: ?>
+          <span class="text-success">
+            <?php
+              if ($item['reserve'] === 'Y') {
+                $status = 'On Reserve';
+              } elseif (is_int($item['availability']) && !empty($item['status'])) {
+                $status = $item['status'];
+              } else {
+                $status = 'Available';
+              }
+            ?>
+            <?=$this->transEsc($status)?>
+          </span>
         <?php endif; ?>
       </td>
     </tr>
