revert aria-label redundant with value

--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -152,16 +152,16 @@
         <?php endif; ?>
       </div>
       <div class="adv-submit">
-        <input class="clear-btn btn btn-default" type="button" value="<?= $this->transEscAttr('Clear')?>" aria-label="<?=$this->transEscAttr('Clear')?>">
-        <input class="btn btn-primary" type="submit" value="<?= $this->transEscAttr('Find')?>" aria-label="<?= $this->transEscAttr('Find')?>">
+        <input class="clear-btn btn btn-default" type="button" value="<?= $this->transEscAttr('Clear')?>">
+        <input class="btn btn-primary" type="submit" value="<?= $this->transEscAttr('Find')?>">
       </div>
       <?php if (isset($this->extraAdvancedControls)): ?>
         <div class="clearfix">
           <?=$this->extraAdvancedControls ?>
         </div>
         <div class="adv-submit">
-          <input class="clear-btn btn btn-default" type="button" value="<?= $this->transEscAttr('Clear')?>" aria-label="<?=$this->transEscAttr('Clear')?>">
-          <input class="btn btn-primary" type="submit" value="<?= $this->transEscAttr('Find')?>" aria-label="<?= $this->transEscAttr('Find')?>">
+          <input class="clear-btn btn btn-default" type="button" value="<?= $this->transEscAttr('Clear')?>">
+          <input class="btn btn-primary" type="submit" value="<?= $this->transEscAttr('Find')?>">
         </div>
       <?php endif; ?>
     </div>
