--- a/themes/bootstrap3/templates/channels/channelList.phtml
+++ b/themes/bootstrap3/templates/channels/channelList.phtml
@@ -27,7 +27,7 @@
   <form action="<?=$this->url('channels-search')?>" class="channel-search form-inline">
     <?=$this->transEsc('channel_searchbox_label')?>
     <input type="text" name="lookfor" class="form-control" value="<?=$this->escapeHtmlAttr($this->lookfor) ?>" aria-label="<?=$this->transEscAttr('search_terms') ?>">
-    <input type="submit" value="<?=$this->transEscAttr('Submit')?>" class="btn btn-default" aria-label="<?=$this->transEscAttr('Submit') ?>">
+    <input type="submit" value="<?=$this->transEscAttr('Submit')?>" class="btn btn-default">
   </form>
 <?php endif; ?>
 
