--- a/themes/bootstrap3/templates/search/newitem.phtml
+++ b/themes/bootstrap3/templates/search/newitem.phtml
@@ -34,5 +34,5 @@
       </select>
     </div>
   <?php endif; ?>
-  <input class="btn btn-primary" type="submit" name="submit" value="<?=$this->transEscAttr('Find')?>" aria-label="<?= $this->transEscAttr('Find')?>">
+  <input class="btn btn-primary" type="submit" name="submit" value="<?=$this->transEscAttr('Find')?>">
 </form>
