--- a/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/standard.phtml
@@ -21,7 +21,7 @@
         <?php if ($holding['availability'] ?? false): ?>
           <?php /* Begin Available Items (Holds) */ ?>
             <?php
-              if ((int)$holding['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNCERTAIN) {
+              if ((int)$holding['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN) {
                 $statusClassEsc = 'text-warning';
                 $status = $holding['status'];
               } else {
