--- a/themes/bootstrap3/templates/ajax/status-full.phtml
+++ b/themes/bootstrap3/templates/ajax/status-full.phtml
@@ -26,9 +26,9 @@
       <td class="fullAvailability">
         <?php if ($item['use_unknown_message'] ?? false): ?>
           <span><?=$this->transEsc("status_unknown_message")?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNAVAILABLE): ?>
+        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNAVAILABLE): ?>
           <span class="text-danger"><?=$this->transEsc($item['status'])?></span>
-        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Connection::ITEM_STATUS_UNCERTAIN): ?>
+        <?php elseif ((int)$item['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN): ?>
           <span class="text-warning"><?=$this->transEsc($item['status'])?></span>
         <?php else: ?>
           <span class="text-success">
