added role and aria label to all myresearch menu instances, reverted results.phtml of search as no proper label can be assigned on the fly, created a more general label for the advanced search layout

--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -166,7 +166,7 @@
       <?php endif; ?>
     </div>
 
-    <div class="<?=$this->layoutClass('sidebar')?>" role="region" aria-label="<?=$this->transEsc("Search Tips")?>">
+    <div class="<?=$this->layoutClass('sidebar')?>" role="region" aria-label="<?=$this->transEsc("Search Filter and Tips")?>">
       <?php if ($hasDefaultsApplied): ?>
         <input type="hidden" name="dfApplied" value="1">
       <?php endif ?>
