--- a/themes/bootstrap3/templates/checkouts/history.phtml
+++ b/themes/bootstrap3/templates/checkouts/history.phtml
@@ -182,6 +182,6 @@
   <?php endif; ?>
 </div>
 
-<div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('Your Account')?>">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'historicloans'])?>
 </div>
