--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
@@ -33,7 +33,7 @@
     <?php endif; ?>
     <div class="media-body">
       <div class="result-body">
-        <header>
+        <header class="resultItemLine1">
           <h2>
             <?php $missing = $this->driver instanceof \VuFind\RecordDriver\Missing; ?>
             <?php if (!$missing): ?><a href="<?=$this->escapeHtmlAttr($this->recordLinker()->getUrl($this->driver))?>" class="getFull" data-view="<?=$this->params->getOptions()->getListViewOption() ?>"><?php endif; ?>
@@ -48,7 +48,7 @@
 
           <?php if ($this->driver->isCollection()): ?>
             </header>
-            <div class="resultItemLine1">
+            <div class="resultItemLine2">
               <?=implode('<br>', array_map([$this, 'escapeHtml'], $this->driver->getSummary())); ?>
           <?php else: ?>
             <?php $summAuthors = $this->driver->getPrimaryAuthors(); if (!empty($summAuthors)): ?>
@@ -58,7 +58,7 @@
               <?php endforeach; ?>
             <?php endif; ?>
             </header>
-            <div class="resultItemLine1">
+            <div class="resultItemLine2">
             <?php $journalTitle = $this->driver->getContainerTitle(); $summDate = $this->driver->getPublicationDates(); ?>
             <?php if (!empty($journalTitle)): ?>
               <?=/* TODO: handle highlighting more elegantly here */ $this->transEsc('Published in') . ' <a href="' . $this->record($this->driver)->getLink('journaltitle', str_replace(['{{{{START_HILITE}}}}', '{{{{END_HILITE}}}}'], '', $journalTitle)) . '">' . $this->highlight($journalTitle) . '</a>';?>
