--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -166,7 +166,7 @@
       <?php endif; ?>
     </div>
 
-    <div class="<?=$this->layoutClass('sidebar')?>" role="region" aria-label="<?=$this->transEsc("Search Filter and Tips")?>">
+    <div class="<?=$this->layoutClass('sidebar')?>"">
       <?php if ($hasDefaultsApplied): ?>
         <input type="hidden" name="dfApplied" value="1">
       <?php endif ?>
