--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -14,7 +14,7 @@
       <div class="checkbox pull-left flip">
         <label>
           <input type="checkbox" name="selectAll" class="checkbox-select-all">
-          <?=$this->transEsc('select_page')?>
+          <?=$this->transEsc('select_page_cart')?>
         </label>
       </div>
       <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
