use select_all_on_page in checkedout.phtml and list.phtml

--- a/themes/bootstrap3/templates/myresearch/checkedout.phtml
+++ b/themes/bootstrap3/templates/myresearch/checkedout.phtml
@@ -49,7 +49,7 @@
         <div class="checkbox">
           <label>
             <input type="checkbox" name="selectAll" class="checkbox-select-all">
-            <?=$this->transEsc('select_page')?>
+            <?=$this->transEsc('select_all_on_page')?>
           </label>
           <div class="btn-group">
             <input type="submit" id="renewSelected" name="renewSelected" value="<?=$this->transEscAttr('renew_selected')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
