changed account nav aria label to 'account_menu_label' according to discussion

--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -166,7 +166,7 @@
       <?php endif; ?>
     </div>
 
-    <div class="<?=$this->layoutClass('sidebar')?>"">
+    <div class="<?=$this->layoutClass('sidebar')?>">
       <?php if ($hasDefaultsApplied): ?>
         <input type="hidden" name="dfApplied" value="1">
       <?php endif ?>
