--- a/themes/bootstrap3/templates/search/history.phtml
+++ b/themes/bootstrap3/templates/search/history.phtml
@@ -54,7 +54,7 @@
 </div>
 
 <?php if ($saveSupported): ?>
-  <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('Your Account')?>">
+  <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar" role="navigation" aria-label="<?=$this->transEsc('account_menu_label')?>">
     <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'history'])?>
   </div>
 <?php endif; ?>
